Changelog
=========

8.2-dev0 - (unreleased)
---------------------------

8.1 - (2023-11-24)
---------------------------
* Change: map-interactive content type
  [claudiaifrim]

8.0 - (2023-11-22)
---------------------------
* Change: (feat): Serializer and deserializer for embed tableau and embed eea map
  [razvanMiu]

7.0 - (2023-11-17)
---------------------------
* Change: feat: serialize embed_visualization and new embed_map
  [razvanMiu]

6.3 - (2023-10-31)
---------------------------
* Change: 257682 toolbar
  [razvanMiu]

6.2 - (2023-10-06)
---------------------------
* Change: elasticconnectors support second level aggregations
  [andreiggr]

6.1 - (2023-09-28)
---------------------------
* Change: Make figure note available for embed blocks
  [andreiggr]

6.0 - (2023-09-27)
---------------------------
* Change: Add Figure Note behavior
  [andreiggr refs #257682]

5.3 - (2023-08-31)
---------------------------
* Change: Add ElasticConnector CT
  [andreiggr]

5.2 - (2023-06-19)
---------------------------
* Change: Tableau endpoint
  [andreiggr]

5.1 - (2023-06-16)
---------------------------
* Change: feat: include data_provenance with map viz data
  [razvanMiu]

5.0 - (2023-06-13)
---------------------------
* Change: refact: change field name for tableau visualization
  [razvanMiu]

4.6 - (2023-05-18)
---------------------------
* Bug: updated schema definition with default value
  [alecghica refs #252894]

4.5 - (2023-05-15)
---------------------------
* Bug: updated schema definition
  [alecghica refs #252894]

4.4 - (2023-05-09)
---------------------------
* Change: add eea core metadata to visualization response
  [razvanMiu]

4.3 - (2023-04-26)
---------------------------
* Fix: fixed profile import for the File content type
  [alecghica refs #250426]

4.2 - (2023-04-25)
---------------------------
* Change: added needed behaviour to the File content type
  [andreiggr refs #250426]

4.1 - (2023-04-19)
---------------------------