@@ -1,0 +1,9 @@
+<?xml version="1.0"?>
+<object name="portal_types" meta_type="Plone Types Tool">
+  <object name="map_visualization" meta_type="Dexterity FTI" />
+  <object name="tableau_visualization" meta_type="Dexterity FTI" />
+  <object name="discodataconnector" meta_type="Dexterity FTI" />
+  <object name="elasticconnector" meta_type="Dexterity FTI" />
+  <object name="visualization" meta_type="Dexterity FTI" />
+  <object name="map_interactive" meta_type="Dexterity FTI"/>
+</object>
