@@ -1,0 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
+<object name="discodataconnector" meta_type="Dexterity FTI">
+  <property name="add_permission">eea.dataconnector.addDiscodataConnector</property>
+</object>
