@@ -13,6 +13,8 @@ class HiddenProfiles:
         return [
             "eea.api.dataconnector:uninstall",
             "eea.api.dataconnector:upgrade_50",
+            "eea.api.dataconnector:upgrade_60",
+            "eea.api.dataconnector:upgrade_82",
         ]
 
 
