@@ -3,6 +3,8 @@ Changelog
 
 8.2-dev0 - (unreleased)
 ---------------------------
+* Feature: Add custom add permissions for EEA-Viz content-types
+  [avoinea - refs #257682]
 
 8.1 - (2023-11-24)
 ---------------------------
